--- a/README
+++ b/README
@@ -12,7 +12,7 @@
         USAGE
         -----
 
-        > take { [ f | i | l | u]  | [ path/to/test.rb ] | [ path/to/test.rb test_x ] | [ --list path/to/test.rb ] } 
+        > take { [ f | i | l | u]  | [ path/to/test.rb ] | [ path/to/test.rb test_x ] | [ --list path/to/test.rb ] | [ -r path/to/some/tests] } 
 
 
         EXAMPLES
@@ -25,4 +25,6 @@
         > take test/integration/foo/bar_test.rb test_whatever # run specific test
 
         > take --list test/integration/foo/bar_test.rb # shows all tests in the given file
+
+        > take -r test/integration/foo # execute all tests found under test/integration/foo recursivly
 	
